@@ -50,7 +50,6 @@ import java.util.concurrent.atomic.AtomicBoolean;
  * Not a singletron
  */
 public final class LaunchServer implements Runnable, AutoCloseable, Reconfigurable {
-    public static final Class<? extends LauncherBinary> defaultLauncherEXEBinaryClass = null;
     /**
      * Working folder path
      */
@@ -95,8 +94,6 @@ public final class LaunchServer implements Runnable, AutoCloseable, Reconfigurab
      * Pipeline for building EXE
      */
     public final LauncherBinary launcherEXEBinary;
-    //public static LaunchServer server = null;
-    public final Class<? extends LauncherBinary> launcherEXEBinaryClass;
     // Server config
     public final AuthHookManager authHookManager;
     public final LaunchServerModulesManager modulesManager;
@@ -147,9 +144,6 @@ public final class LaunchServer implements Runnable, AutoCloseable, Reconfigurab
         modulesManager.invokeEvent(new NewLaunchServerInstanceEvent(this));
 
         // Print keypair fingerprints
-
-        // Load class bindings.
-        launcherEXEBinaryClass = defaultLauncherEXEBinaryClass;
 
         runtime.verify();
         config.verify();
@@ -276,12 +270,10 @@ public final class LaunchServer implements Runnable, AutoCloseable, Reconfigurab
     }
 
     private LauncherBinary binary() {
-        if (launcherEXEBinaryClass != null) {
-            try {
-                return (LauncherBinary) MethodHandles.publicLookup().findConstructor(launcherEXEBinaryClass, MethodType.methodType(void.class, LaunchServer.class)).invoke(this);
-            } catch (Throwable e) {
-                logger.error(e);
-            }
+        LaunchServerLauncherExeInit event = new LaunchServerLauncherExeInit(this, null);
+        modulesManager.invokeEvent(event);
+        if(event.binary != null) {
+            return event.binary;
         }
         try {
             Class.forName("net.sf.launch4j.Builder");
@@ -519,7 +511,7 @@ public final class LaunchServer implements Runnable, AutoCloseable, Reconfigurab
                 launcherPackDir = getPath(LAUNCHERPACK_NAME);
             if (keyDirectory == null) keyDirectory = getPath(KEY_NAME);
             if (tmpDir == null)
-                tmpDir = Paths.get(System.getProperty("java.io.tmpdir")).resolve(String.format("launchserver-%s", SecurityHelper.randomStringToken()));
+                tmpDir = Paths.get(System.getProperty("java.io.tmpdir")).resolve("launchserver-%s".formatted(SecurityHelper.randomStringToken()));
         }
 
         private Path getPath(String dirName) {
